# PixelPolicy

./: .env.example  .gitignore  PLAN.md  README.md  SESSION_HANDOFF.md  _RUNPOD_COMMANDS.md  _RUNPOD_METRICS.md  new_game.md  pyproject.toml
.claude/agent-memory/docs-maintainer/: MEMORY.md  distillation_dataset.md  repo_docs_map.md
.claude/agents/: docs-maintainer.md
agents/: Readme.md  __init__.py  backend.py  base.py  config.py  pyproject.toml  rollout.py  run.py  training_integration.md
agents/anagram/: agent.py
agents/bullscows/: agent.py
agents/charcount/: agent.py
agents/charset/: agent.py
agents/codebreaker/: agent.py
agents/consistency/: agent.py
agents/crossword/: agent.py
agents/endstart/: agent.py
agents/mistakeid/: agent.py
agents/rhyme/: agent.py
agents/tests/: test_agent.py
agents/tower/: agent.py
agents/validity/: agent.py
agents/wordle/: README.md  __init__.py  agent.py  running_inference.md
distillation/: PLAN.md  README.md  __init__.py  batch_play.md  batch_play.py  blog_notes.md  config.py  cost_probe.py  dataset.py  generate.py  hello_claude.py  programmatic.py  push.py  pyproject.toml  reexport.py  registry.py  run.py  schema.py
games/: CODE_IMPLEMENTATION.md  DATA_SOURCING.md
games/anagram/: README.md  client.py  game.py  play.py  pyproject.toml  render.py  server.py
games/anagram/tests/: test_client.py  test_game.py  test_render.py
games/bullscows/: README.md  client.py  game.py  play.py  pyproject.toml  render.py  server.py
games/bullscows/tests/: test_client.py  test_game.py  test_render.py
games/charcount/: README.md  client.py  game.py  play.py  pyproject.toml  render.py  server.py
games/charcount/tests/: test_client.py  test_game.py  test_render.py
games/charset/: README.md  client.py  game.py  play.py  pyproject.toml  render.py  server.py
games/charset/tests/: test_client.py  test_game.py  test_render.py
games/codebreaker/: README.md  client.py  game.py  play.py  pyproject.toml  render.py  server.py
games/codebreaker/tests/: test_client.py  test_game.py  test_render.py
games/consistency/: README.md  client.py  game.py  play.py  pyproject.toml  render.py  server.py
games/consistency/tests/: test_client.py  test_game.py  test_render.py
games/crossword/: README.md  client.py  game.py  play.py  pyproject.toml  render.py  server.py
games/crossword/tests/: test_client.py  test_game.py  test_render.py
games/endstart/: README.md  client.py  game.py  play.py  pyproject.toml  render.py  server.py
games/endstart/tests/: test_client.py  test_game.py  test_render.py
games/mistakeid/: README.md  build_challenges.py  challenges.jsonl  client.py  game.py  play.py  pyproject.toml  render.py  server.py
games/mistakeid/tests/: test_client.py  test_game.py  test_render.py
games/rhyme/: README.md  client.py  game.py  play.py  pyproject.toml  render.py  server.py
games/rhyme/tests/: test_client.py  test_game.py  test_render.py
games/snake/: pyproject.toml
games/tower/: README.md  client.py  game.py  play.py  pyproject.toml  render.py  server.py
games/tower/tests/: test_client.py  test_game.py  test_render.py
games/validity/: README.md  client.py  game.py  play.py  pyproject.toml  render.py  server.py
games/validity/tests/: test_client.py  test_game.py  test_render.py
games/wordle/: README.md  client.py  game.py  play.py  pyproject.toml  render.py  server.py  split.py  train_words.txt  val_words.txt  words.txt
games/wordle/tests/: test_client.py  test_game.py  test_play.py  test_render.py  test_server.py
games/wordvocab/: README.md  build.py  build_meanings.py  pyproject.toml  split.py  vocab.txt
inference/: README.md  evaluate.py  metrics.py  pyproject.toml  recompute.py  run_checkpoints.py  server.py
inference/analysis/: viz_eval.py
training/: CURRICULUM_NOTES.md  LEARNING_DYNAMICS_NOTES.md  README.md  __init__.py  pyproject.toml
training/analysis/: HANDOFF_dynamics_viz.md  viz_dynamics.py
training/sft/: __init__.py  data_curriculum.py  data_flat.py  dynamics.py  format.py  healthcheck.py  stats.py  train.py  upload.py
