[project]
name = "pixel-policy"
version = "0.1.0"
description = "From pixels to policies — multimodal agents that learn to play games"
requires-python = ">=3.11"
dependencies = []

[tool.uv.workspace]
members = ["games/*", "agents", "training", "inference", "distillation"]

[tool.uv.sources]
agents = { workspace = true }
training = { workspace = true }
inference = { workspace = true }
distillation = { workspace = true }
# Pin torch to the CUDA 12.8 wheel. The default PyPI torch now targets CUDA 13, which fails to
# initialize on the CUDA-12.8 drivers most cloud GPU hosts (e.g. RunPod) ship. Linux-only so
# non-Linux dev still resolves torch from PyPI normally.
torch = { index = "pytorch-cu128", marker = "sys_platform == 'linux'" }

[[tool.uv.index]]
name = "pytorch-cu128"
url = "https://download.pytorch.org/whl/cu128"
explicit = true

[tool.pytest.ini_options]
pythonpath = ["."]
