[project]
name = "pixel-policy"
version = "0.1.0"
description = "From pixels to policies — multimodal agents that learn to play games"
requires-python = ">=3.11"
dependencies = []

[tool.uv.workspace]
members = ["games/*", "agents", "training", "inference", "distillation"]

[tool.uv.sources]
agents = { workspace = true }
training = { workspace = true }
inference = { workspace = true }
distillation = { workspace = true }
# NOTE: do NOT pin torch to a pytorch.org cu128 index here. An `explicit` index routes only `torch`
# and uv then fails to pull its `nvidia-*-cu12` CUDA libs (→ missing libcudnn.so.9). On cloud GPU
# pods (CUDA-12.8 driver) install the matching wheel manually instead, then run with --no-sync:
#   uv pip install torch --reinstall --index-url https://download.pytorch.org/whl/cu128
#   uv run --no-sync --package training python -m training.sft.train ...
# (Default PyPI torch targets CUDA 13 and won't init on a 12.8 driver, hence the manual cu128 wheel.)

[tool.pytest.ini_options]
pythonpath = ["."]
