[project]
name = "agents"
version = "0.1.0"
description = "Lightweight model wrappers for game-playing agents"
requires-python = ">=3.11"
dependencies = [
    "openai>=1.0.0",       # OpenAI-compatible backend (vLLM or OpenAI via base_url)
    "python-dotenv>=1.0.0",
    "pydantic>=2.0.0",
    "game-wordle",          # reuse render_observation / WordleClient / render_board
    "game-charcount",       # charcount agent reuses its render_observation
    "game-validity",        # validity agent reuses its render_observation
    "game-anagram",         # anagram agent reuses its render_observation
    "game-rhyme",           # rhyme agent reuses its render_observation
    "game-crossword",       # crossword agent reuses its render_observation
    "game-charset",         # charset agent reuses its render_observation
    "game-mistakeid",       # mistakeid agent reuses its render_observation
    "game-tower",           # tower agent reuses its render_observation
    "game-endstart",        # endstart agent reuses its render_observation
    "game-codebreaker",     # codebreaker agent reuses its render
    "game-bullscows",       # bullscows agent reuses its render
    "game-consistency",     # consistency agent reuses its render_observation
]

[project.optional-dependencies]
# Terminal demo only — eval/training installs don't need it: pip install agents[tui]
tui = ["rich>=13.0.0"]
# Teacher backend (AnthropicBackend) for data distillation — only the distillation
# pipeline needs it; normal OpenAI-compat agent runs don't: pip install agents[teacher]
teacher = ["anthropic>=0.40.0"]

[dependency-groups]
dev = [
    "pytest>=8.0.0",
]

[tool.uv.sources]
game-wordle = { workspace = true }
game-charcount = { workspace = true }
game-validity = { workspace = true }
game-anagram = { workspace = true }
game-rhyme = { workspace = true }
game-crossword = { workspace = true }
game-charset = { workspace = true }
game-mistakeid = { workspace = true }
game-tower = { workspace = true }
game-endstart = { workspace = true }
game-codebreaker = { workspace = true }
game-bullscows = { workspace = true }
game-consistency = { workspace = true }

[tool.uv]
# Flat-layout namespace package imported via the workspace `pythonpath`, not built as a
# wheel — resolve deps without invoking a build backend.
package = false
