[project]
name = "inference"
version = "0.1.0"
description = "Inference pipelines — run trained agents against games"
requires-python = ">=3.11"
dependencies = [
    "pydantic>=2.0.0",
    "python-dotenv>=1.0.0",
    "httpx>=0.27.0",
    "vllm>=0.6.0",          # OpenAI-compatible server engine (server.py launches it)
    # Evaluation harness (metrics.py / evaluate.py / run_checkpoints.py):
    "agents",               # rollout (run_eval/win_rate), OpenAICompatBackend, AgentConfig
    "distillation",         # registry.GAMES — generic per-game (agent, env, sample_targets, good_status)
]

[tool.uv]
# Flat-layout namespace package imported via the workspace `pythonpath`, not built as a
# wheel — resolve deps without invoking a build backend.
package = false
