[project]
name = "game-endstart"
version = "0.1.0"
description = "Ends-with → starts-with — a single-turn word-skill FastAPI game server"
requires-python = ">=3.11"
dependencies = [
    "fastapi>=0.111.0",
    "uvicorn[standard]>=0.30.0",
    "pydantic>=2.0.0",
    "httpx>=0.27.0",
    "game-wordvocab",
]

[dependency-groups]
dev = [
    "pytest>=8.0.0",
]

[tool.uv.sources]
game-wordvocab = { workspace = true }

[tool.uv]
package = false
