[project]
name = "game-rhyme"
version = "0.1.0"
description = "Rhymes — a single-turn word-skill FastAPI game server (MCQ + free-gen)"
requires-python = ">=3.11"
dependencies = [
    "fastapi>=0.111.0",
    "uvicorn[standard]>=0.30.0",
    "pydantic>=2.0.0",
    "httpx>=0.27.0",        # HTTPRhymeClient transport
    "pronouncing>=0.2.0",   # CMU Pronouncing Dictionary (bundled, offline) — the rhyme oracle
    "game-wordvocab",        # committed multi-length vocab.txt + salted split
]

[dependency-groups]
dev = [
    "pytest>=8.0.0",
]

[tool.uv.sources]
game-wordvocab = { workspace = true }

[tool.uv]
# Flat-layout namespace modules imported via the workspace `pythonpath`, not built as a wheel.
package = false
