[project]
name = "game-wordle"
version = "0.1.0"
description = "Wordle — a FastAPI game server"
requires-python = ">=3.11"
dependencies = [
    "fastapi>=0.111.0",
    "uvicorn[standard]>=0.30.0",
    "pydantic>=2.0.0",
    "httpx>=0.27.0",  # HTTPWordleClient transport
]

[project.optional-dependencies]
# Terminal UI only — training installs don't need it: pip install game-wordle[tui]
tui = ["rich>=13.0.0"]

[dependency-groups]
dev = [
    "pytest>=8.0.0",
    "rich>=13.0.0",  # play.py / test_play.py
]

[tool.uv]
# Flat-layout namespace modules imported via the workspace `pythonpath`, not built as a
# wheel. Tell uv to resolve deps but not invoke a build backend (setuptools can't
# auto-discover this layout). Imports resolve from the repo root.
package = false
